--- a/stagehand/src/style/style.css
+++ b/stagehand/src/style/style.css
@@ -15,6 +15,11 @@
 
 .v-application {
     background-color: #f3f4f6 !important;
+    height: 100% !important;
+}
+
+body {
+    background-color: #f3f4f6;
 }
 
 body::-webkit-scrollbar {
